# automachef-save

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
test_data/1234567890/: egs.dat_Backup  prefs.dat_Backup  results.automachef  results.automachef_Backup
test_data/1234567890/blueprints/: 0.blueprint  1.blueprint  10.blueprint  11.blueprint  2.blueprint  4.blueprint  5.blueprint  6.blueprint  9.blueprint  meta.dat_Backup
test_data/1234567890/levels/1/: 0.kitchen  0.kitchen_Backup  1.kitchen  1.kitchen_Backup  meta.dat_Backup
test_data/1234567890/levels/10/: 0.kitchen
test_data/1234567890/levels/11/: 0.kitchen  1.kitchen  2.kitchen  2.kitchen_Backup  4.kitchen  4.kitchen_Backup  meta.dat_Backup
test_data/1234567890/levels/12/: 0.kitchen  0.kitchen_Backup  1.kitchen  2.kitchen  2.kitchen_Backup  3.kitchen  3.kitchen_Backup  4.kitchen  4.kitchen_Backup  meta.dat_Backup
test_data/1234567890/levels/13/: 0.kitchen  0.kitchen_Backup  3.kitchen  meta.dat_Backup
test_data/1234567890/levels/14/: 0.kitchen
test_data/1234567890/levels/2/: 0.kitchen
test_data/1234567890/levels/3/: 0.kitchen  0.kitchen_Backup  meta.dat_Backup
test_data/1234567890/levels/4/: 0.kitchen  1.kitchen  1.kitchen_Backup  meta.dat_Backup
test_data/1234567890/levels/5/: 0.kitchen  0.kitchen_Backup  1.kitchen  1.kitchen_Backup  2.kitchen  meta.dat_Backup
test_data/1234567890/levels/6/: 0.kitchen  1.kitchen  meta.dat_Backup
test_data/1234567890/levels/7/: 0.kitchen
test_data/1234567890/levels/8/: 0.kitchen  0.kitchen_Backup  meta.dat_Backup
(+17 files in other folders)
