[package]
name = "automachef-save"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data-encoding = "2.3.2"
sha-1 = "0.10.0"
cbc = { version = "0.1.2" }
aes = "0.8.1"
block-padding = { version = "0.3.2", features = ["std"] }
inout = { version = "0.1.3", features = ["std"] }
cipher = { version = "0.4.3", features = ["block-padding", "alloc"] }
clap = { version = "3.2.4", features = ["derive"] }
walkdir = "2"
anyhow = "1.0.57"
